# two-d-array

./: CMakeLists.txt  diagonal-check.cpp  row-by-col.cpp  sum-diagonal.cpp  symmetric.cpp  two-d-array.cpp
